# Chest-X-Ray

./: .gitignore  .pdm-python  pyproject.toml
experiments/: run_experiment.py  run_experiment1.py
mlruns/.trash/189863963965401463/: meta.yaml
mlruns/.trash/893243008015032153/: meta.yaml
mlruns/.trash/893243008015032153/21a430cadc72402092c0501a2af7ba92/: meta.yaml
mlruns/.trash/893243008015032153/21a430cadc72402092c0501a2af7ba92/tags/: mlflow.runName  mlflow.source.name
mlruns/.trash/893243008015032153/41c452f5a1504d4990fa9ba98ac0a754/: meta.yaml
mlruns/.trash/893243008015032153/41c452f5a1504d4990fa9ba98ac0a754/tags/: mlflow.runName
mlruns/.trash/893243008015032153/db1438da88e544029dea8a099f48469b/: meta.yaml
mlruns/.trash/893243008015032153/db1438da88e544029dea8a099f48469b/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
mlruns/0/: meta.yaml
mlruns/877438186260697978/: meta.yaml
models/: base_model.py  resnet_model.py
notebook/: process.ipynb  process_test.ipynb  train.ipynb
trainer/: dataset.py  train_utils.py  trainer.py
