[project]
name = "Chest-X-Ray"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ebraamemad", email = "beboe668@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dockarpreexisit = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
test = [
    "pytest>=8.3.5",
]
