[project]
name = "Chest-X-Ray"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ebraamemad", email = "beboe668@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
production = [
    "fastapi>=0.115.12",
]
dockarpreexisit = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
development = [
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]
developmentml = [
    "mlflow>=2.22.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

